--- a/postgre_python_connection(2).ipynb
+++ b/postgre_python_connection(2).ipynb
@@ -212,7 +212,7 @@
    "id": "e74d26c3-1fd6-4e2c-bdad-ff331919e2a2",
    "metadata": {},
    "source": [
-    "### Checking the tale columns"
+    "### Checking the table columns"
    ]
   },
   {
