--- a/postgre_python_connection(2).ipynb
+++ b/postgre_python_connection(2).ipynb
@@ -5,7 +5,7 @@
    "id": "dbf8901f-29e9-4ec4-b89b-5d8cfd48d7e4",
    "metadata": {},
    "source": [
-    "# Step-by-Step Demonstration of Connecting  Python to PostgresSQL Database "
+    "# Step-by-Step Demonstration of Connecting  Python to PostgresSQL Database and loading some sample dataset "
    ]
   },
   {
